add more ignore files

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,7 @@ amplifytools.xcconfig
 .secret-*
 **.sample
 #amplify-do-not-edit-end
+ios/Podfile
+ios/Flutter/Debug.xcconfig
+ios/Flutter/Release.xcconfig
+ios/Flutter/Debug.xcconfig
