--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   amplify_flutter: ^0.6.9
+  amplify_auth_cognito: ^0.6.9
 
 dev_dependencies:
   flutter_test:
