--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   amplify_flutter: ^0.6.9
   amplify_auth_cognito: ^0.6.9
+  form_validator: ^1.0.3
 
 dev_dependencies:
   flutter_test:
