--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   geolocator: ^9.0.2
   flutter_map: ^3.0.0
   latlong2: ^0.8.1
+  geojson: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +71,7 @@ flutter:
   assets:
       - assets/images/
       - assets/images/icons/
+      - assets/data.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
