draw direction routes

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -47,5 +47,22 @@
         }
       ]
     }
+  },
+  "api": {
+    "geoapp": {
+      "service": "AppSync",
+      "providerPlugin": "awscloudformation",
+      "output": {
+        "authConfig": {
+          "defaultAuthentication": {
+            "authenticationType": "API_KEY",
+            "apiKeyConfig": {
+              "apiKeyExpirationDays": 7
+            }
+          },
+          "additionalAuthenticationProviders": []
+        }
+      }
+    }
   }
 }
