draw direction route

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -57,7 +57,9 @@
           "defaultAuthentication": {
             "authenticationType": "API_KEY",
             "apiKeyConfig": {
-              "apiKeyExpirationDays": 7
+              "apiKeyExpirationDays": 7,
+              "apiKeyExpirationDate": "2022-11-02T03:21:09.979Z",
+              "description": "UserLocationKey"
             }
           },
           "additionalAuthenticationProviders": []
